# trust-engine-v2

./: .dockerignore  .env.example  .gitignore  CONT_GUIDE_README.md  Dockerfile  README.md  WORKLOAD_IDENTITY.md  index.yaml  pyproject.toml  run_tests.sh  start_scrapping_tools.sh
.github/workflows/: deploy-cloud-run.yml  terraform.yml  test.yml
config/: argentina.yaml  bolivia.yaml  chile.yaml  colombia.yaml  costa_rica.yaml  honduras.yaml  peru.yaml  venezuela.yaml
docs/: ARQUITECTURA_PROCESAMIENTO_POSTS_JOBS.md  CREATE_POSTS_CONSOLIDATED.md  DATA_LAKE_ARCHITECTURE.md  EMPTY_RESULT_JOBS.md  EMPTY_RESULT_JOBS_EXAMPLES.md  FAILED_JOBS_ANALYSIS.md  FIRESTORE_STATUS.md  INFORMATION_TRACER.md  JSON_TO_PARQUET_OPTIMIZATIONS.md  PROPUESTA_LOGS_EN_JOBS.md  QUOTA_MONITORING.md  TESTING_PROCESS_POSTS.md  TESTING_PROCESS_POSTS_LOCAL.md  TEST_REVIEW.md  YOUTUBE_KEYWORDPOST_FILTERING.md  arquitectura-trust-engine.drawio
docs/GCP/: ACCESS_CONTROL.md  CONFIGURE_SCHEDULER.md  DATASTORE_CONF.md  DEPLOY_SCRAPPING_TOOLS.md  FIRESTORE_ADMIN.md  FIRESTORE_COST_OPTIMIZATION.md  FIX_SCHEDULER_AUTH.md  SECRET_MANAGER_SETUP.md  TROUBLESHOOTING_AUTHENTICATION.md  WORKLOAD_IDENTITY.md
scripts/: analyze_error_logs.py  analyze_failed_jobs.py  analyze_json_to_parquet.py  check_api_quota.py  check_candidate_jobs_status.py  cleanup_failed_jobs.py  cleanup_wif_bindings.sh  count_failed_jobs.py  create_firestore_indexes.sh  create_posts_consolidated.py  create_reprocess_jobs.py  create_scheduler_service_account.sh  create_secret_manager_secret.sh  deploy_cloud_run.sh  deploy_indexes.sh  diagnose_processing_posts_detailed.py  fetch_post_replies_direct.py  fix_processing_posts_with_empty_jobs.py  fix_scheduler_auth.sh  fix_wif_bindings.sh  fix_wif_setup.sh  get_job_results.py  grant_secret_access.sh  json_posts_to_csv.py  json_to_parquet.py  list_failed_jobs_without_done.py  list_successful_jobs_today.py  mark_post_and_jobs_verified.py  proxy_cloud_run.sh  proxy_scrapping_tools.sh  query_datastore.py  query_posts_count.py  reactivate_empty_result_jobs_from_log.py  retry_empty_result_jobs.py  run_local_api_service.sh  search_replies_by_post_id.py  setup_cloud_scheduler.sh  update_processing_jobs.py  update_scheduler_process_jobs_uri.sh  update_scheduler_process_posts_uri.sh  (+10 more)
scripts/gcs/: read_json_folder.py
src/data_analysis/: README.md  candidate_summary.py  read_data.py  report_readme.md  sentimiento.py  sentimiento_dictionary.py  sentimiento_multietiqueta.py  youtube_cleanning.py
src/mediaparty_trust_api/: __init__.py  main.py  models.py
src/nlp_process/: __init__.py  main.py
src/script_processing/: README.md  cli.py  sentiment_analyzer.py
src/trust_api/: main.py
src/trust_api/nlp/: main.py  (+3 more)
terraform/: .gitignore  CREATE_JSON_TO_PARQUET_JOB.md  README.md  README_CLOUD_SCHEDULER.md  VARIABLES.md  backend.gcs.hcl.example  backend.tf  bigquery_external_tables.tf  bootstrap_apis.tf  cloud_scheduler_process_posts.tf  terraform.tfvars.example  variables.tf  versions.tf  workflow_nlp_process.tf
test/: example_article.json  test_client.py  test_metrics.py
tests/: README.md  __init__.py  conftest.py  test_endpoints.py  test_information_tracer.py  test_main.py  test_metrics.py  test_models.py  test_scrapping_tools.py  test_stanza_service.py
(+20 files in other folders)
