[tool.poetry]
name = "mediaparty-trust-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["JuanCruzC97 <juancruzcamacho97@gmail.com>"]
packages = [
    { include = "trust_api", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = ">=2.31.0"
dotenv = ">=0.9.9"
fastapi = ">=0.118.0"
pydantic-settings = ">=2.11.0"
uvicorn = ">=0.34.0"
stanza = ">=1.10.1"
dspy-ai = ">=2.5.0"
pyyaml = ">=6.0.3"
google-cloud-firestore = "^2.22.0"
google-cloud-storage = "^2.18.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.6.8"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pyarrow = "^22.0.0"

[tool.poetry.scripts]
trust-api = "trust_api.main:app"
trust-api-nlp = "trust_api.nlp.main:app"
trust-api-scrapping-tools = "trust_api.scrapping_tools.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "F",   # pyflakes
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["trust_api"]

[tool.pytest.ini_options]
testpaths = ["tests", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/trust_api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
